82) Remove old dead 3G code from goahead.<br>
83) move some scripts to user/usb. More free space in rwfs.<br>
84) Disable hotplug before update firmware.<br>
85) Samba2/3 merge the smbd and nmbd binaries. The binary generated is called "smbd", while "nmbd" becomes a symlink(decrease duplicate code).<br>
86) Fix auth type select in VPN.<br>

<br>
<b>1.10.x</b><br>
1) Update busybox to 1.19.2.<br>
2) Update libevent to 2.0.13 version.<br>
3) Add support exec external scripts on wpn button pressed or hold (/etc/scripts/OnPressWPS.button and OnHoldWPS.button scripts. And WPSHlprmode variable).<br>
4) Update Uboot to 3.6.0.0 sdk version.<br>
5) Some kernel fixes backport from 3.5.2.0 sdk.<br>
6) Hotplug now support print server.<br>
7) Update Ralink Hardware NAT to v0.92 3.6.0.0 sdk.<br>
8) Add spi workaround from 3.6.0.0 sdk.<br>
9) Fix boot device detect for RT6855.<br>
10) Update gdma driver form 3.6.0.0 sdk.<br>
11) Backport SPI driver from 3.6.0.0. New flash support.<br>
12) Backport rdm driver from 3.6.0.0 SDK.<br>
13) Fix RT6855 support in serial drivers.<br>
14) dwc_otg driver up to 3.6.0.0 sdk version.<br>
15) usb gadget up to 3.6.0.0 sdk version.<br>
16) ehci driver up to 3.6.0.0 sdk.<br>
17) Add mobilepack support to usb option.<br>
18) gdma and i2c drivers up.<br>
19) update pcm and i2s drivers up from 3.6.0.0 sdk.<br>
20) watchdog drivers up to 3.6.0.0 SDK.<br>
21) 8021q ralink tso support.<br>
22) Prevent IGMP report packet flooding to all NICs.<br>
23) Add 6rd support.<br>
24) Usb suspend at start need for power save.<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>